--- a/bigbox3d.html
+++ b/bigbox3d.html
@@ -14,7 +14,7 @@
         */
         const config = {
           // host: "",                                                               // the host of your images, typically the same host, bigbox3d.html resides at (default: "", e.g. "https://example.com")
-          // path: "/bigbox3d/",                                                               // base path to image files (default: "", e.g. "/bigbox3d/img/")
+          // path: "",                                                               // base path to image files (default: "", e.g. "/bigbox3d/img/")
           // ext: "jpg",                                                             // the file extension of the box texture files (default: "jpg", e.g. "png" if you use .png files)
           // bg: "ffffff",                                                           // the static background color, IMPORTANT: please always use 6 hex characters! (default: "000000", e.g. "ffffff" if you want a white background)
           // bgvignette: true,                                                       // use a vignette effect for the background (default: true)
@@ -23,7 +23,7 @@
           //                                                                            "?bgext=gif" if you have .gif background file
           //                                                                            "?bgext=mp4" if you have a video file (for videos currently only mp4 is supported)
           // bginterval: 10,                                                         // the interval in seconds to change the background image (applies if you have multiple background images)
-          // extlink: "https://github.com/theMK2k/bigbox3d",                         // an external link to be displayed in the bottom left corner
+          // extlink: "https://brainradioactivity.github.io/bigbox3d/",                         // an external link to be displayed in the bottom left corner
           // extlink_innerhtml: "scanned by MK2k, presented with <b>Big Box 3D</b>", // the innerHTML of the external link,
           // rotation_speed: 20,                                                     // the rotation speed of the box when mouse-dragged (default: 20, range: 1-100)
           // rotation_amortization: 0.91,                                            // the amortization of the rotation speed when mouse released (default: 0.91, range: 0.1-1.0)
