--- a/bigbox3d.html
+++ b/bigbox3d.html
@@ -15,7 +15,7 @@
         const config = {
           // host: "",                                                               // the host of your images, typically the same host, bigbox3d.html resides at (default: "", e.g. "https://example.com")
           // path: "",                                                               // base path to image files (default: "", e.g. "/bigbox3d/img/")
-          // ext: "jpg",                                                             // the file extension of the box texture files (default: "jpg", e.g. "png" if you use .png files)
+          // ext: "png",                                                             // the file extension of the box texture files (default: "jpg", e.g. "png" if you use .png files)
           // bg: "ffffff",                                                           // the static background color, IMPORTANT: please always use 6 hex characters! (default: "000000", e.g. "ffffff" if you want a white background)
           // bgvignette: true,                                                       // use a vignette effect for the background (default: true)
           // bgpattern: true,                                                        // use a pattern effect for the background (default: true)
